# XnneHangLabTTS

./: .gitignore  .gitmodules  AGENTS.md  README.md  environment.cpu.yml  environment.gpu.yml  justfile  pyproject.toml  uv.toml
config/: runtime.toml
docs/superpowers/plans/: 2026-04-05-genie-runtime-launcher-phase-1.md
docs/superpowers/specs/: 2026-04-05-genie-runtime-launcher-design.md
scripts/: use_torch.py
src/xnnehanglab_tts/: cli.py
src/xnnehanglab_tts/runtime/: __init__.py  config.py  download.py  download_adapters.py  environment.py  models.py  paths.py  targets.py  tty.py  verify.py
src/xnnehanglab_tts/webui/: batch_ui.py  genie_runtime.py  genie_tts.py  gsv_lite_runtime.py  gsv_lite_tts.py  preset_ui.py  qwen_tts.py  qwen_tts_runtime.py
tests/runtime/: test_cli.py  test_download.py  test_environment.py  test_paths.py  test_verify.py
tests/webui/: test_genie_runtime.py  test_genie_tts.py
torch-variants/: cpu.toml  cu118.toml  cu124.toml  cu128.toml
