[project]
name = "XnneHangLabTTS"
version = "0.1.0"
description = "Lightweight TTS showcase repository for GSV-Lite, Genie-TTS, and faster-qwen-tts"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "gradio>=5.24.0",
  "pydantic>=2.10.6",
  "loguru>=0.7.3",
  "soundfile>=0.13.1",
  "python-dotenv>=1.1.1",
  "tomli_w>=1.2.0",
]
authors = [{ name = "MrXnneHang", email = "XnneHang@gmail.com" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/XnneHangLab/XnneHangLabTTS"
Repository = "https://github.com/XnneHangLab/XnneHangLabTTS"
Issues = "https://github.com/XnneHangLab/XnneHangLabTTS/issues"

[dependency-groups]
base = [
  "numpy==1.26.4",
]

dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.3",
  "pyright>=1.1.391",
]

cpu = [
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
  "torchaudio @ https://download.pytorch.org/whl/cpu/torchaudio-2.6.0%2Bcpu-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux'",
  "torchaudio @ https://download.pytorch.org/whl/cpu/torchaudio-2.6.0%2Bcpu-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux'",
]

gpu = [
  "torch @ https://download.pytorch.org/whl/cu118/torch-2.6.0%2Bcu118-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
  "torchaudio @ https://download.pytorch.org/whl/cu118/torchaudio-2.6.0%2Bcu118-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
  "torch @ https://download.pytorch.org/whl/cu118/torch-2.6.0%2Bcu118-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux'",
  "torchaudio @ https://download.pytorch.org/whl/cu118/torchaudio-2.6.0%2Bcu118-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux'",
]

genie-tts = [
  "onnx",
  "onnxruntime==1.22.1",
  "pyyaml",
  "huggingface_hub[hf_xet]",
  "pyopenjtalk-plus",
  "nltk",
  "g2pM",
  "jamo",
  "ko_pron",
  "g2pk2",
  "eunjeon; sys_platform == 'win32'",
  "fast_langdetect",
]

gsv-lite = [
  "gsv-tts-lite==0.3.8",
]

qwen-tts = [
  "faster-qwen3-tts>=0.2.5",
  "soxr>=1.0.0",
  "sounddevice>=0.5.2",
]

[tool.uv]
default-groups = ["base", "dev"]
conflicts = [
  [
    { group = "cpu" },
    { group = "gpu" },
  ],
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.hatch.build.targets.wheel]
packages = ["src/xnnehanglab_tts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
