[project]
name = "XnneHangLabTTS"
version = "0.1.0"
description = "Lightweight TTS showcase repository for GSV-Lite, Genie-TTS, and faster-qwen-tts"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "gradio>=5.24.0",
  "pydantic>=2.10.6",
  "loguru>=0.7.3",
  "soundfile>=0.13.1",
  "python-dotenv>=1.1.1",
  "tomli_w>=1.2.0",
]
authors = [{ name = "MrXnneHang", email = "XnneHang@gmail.com" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/XnneHangLab/XnneHangLabTTS"
Repository = "https://github.com/XnneHangLab/XnneHangLabTTS"
Issues = "https://github.com/XnneHangLab/XnneHangLabTTS/issues"

[dependency-groups]
base = [
  "numpy==1.26.4",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
]

dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.3",
  "pyright>=1.1.391",
]

genie-tts = [
  "modelscope",
  "onnx",
  "onnxruntime==1.22.1",
  "pyyaml",
  "huggingface_hub[hf_xet]",
  "pyopenjtalk-plus",
  "nltk",
  "g2pM",
  "jamo",
  "ko_pron",
  "g2pk2",
  "eunjeon; sys_platform == 'win32'",
  "fast_langdetect",
]

gsv-lite = [
  "gsv-tts-lite==0.3.8",
]

qwen-tts = [
  "faster-qwen3-tts>=0.2.5",
  "soxr>=1.0.0",
  "sounddevice>=0.5.2",
]

[tool.uv]
default-groups = ["base", "dev"]

# ── PyTorch 索引 ─────────────────────────────────────────────────────────────
# Linux / 无 GPU：始终使用 CPU 版本
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# GTX 10xx ~ RTX 20/30 系，nvidia-smi 显示 CUDA ≤ 11.8 时：
#   1. 取消注释下方三行
#   2. 注释掉下面 pytorch-cu128 的三行
#   3. 将 [tool.uv.sources] 中的 "pytorch-cu128" 改为 "pytorch-cu118"
#   4. 删除 .venv 和 uv.lock，重新执行 uv sync
# [[tool.uv.index]]
# name = "pytorch-cu118"
# url = "https://download.pytorch.org/whl/cu118"
# explicit = true

# RTX 20/30/40 系新驱动，nvidia-smi 显示 CUDA 12.4 时：
#   1. 取消注释下方三行
#   2. 注释掉下面 pytorch-cu128 的三行
#   3. 将 [tool.uv.sources] 中的 "pytorch-cu128" 改为 "pytorch-cu124"
#   4. 删除 .venv 和 uv.lock，重新执行 uv sync
# [[tool.uv.index]]
# name = "pytorch-cu124"
# url = "https://download.pytorch.org/whl/cu124"
# explicit = true

# RTX 50 系 Blackwell，nvidia-smi 显示 CUDA ≥ 12.8 —— Windows 默认
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# Windows → GPU (默认 cu128)；Linux → CPU
# 切换 CUDA 版本时，同步修改上方启用的 index name
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.hatch.build.targets.wheel]
packages = ["src/xnnehanglab_tts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
